--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
@@ -4626,8 +4626,7 @@
                         </select>
                     </td>
                     <td class="p-1">
-                        <input type="text" id="sh3_csd" name="sh3_csd" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    </td>
+                                            </td>
                     <td class="p-1">
                                             </td>
                     <td class="p-1">
@@ -6266,8 +6265,8 @@
                     <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center">
-                    <div class="text-sm text-gray-700 text-center">1. Yes, brothers</div>
-                    <div class="text-sm text-gray-700 text-center">2. Yes, sisters</div>
+                    <div class="text-sm text-gray-700 text-center">Brothers</div>
+                    <div class="text-sm text-gray-700 text-center">Sisters</div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center">
                     <div>
