--- a/src/templates/7_UZ_ChildDI_Family_Type_Homes_en.html
+++ b/src/templates/7_UZ_ChildDI_Family_Type_Homes_en.html
@@ -90,9 +90,7 @@
         <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. INFORMATION ABOUT THE FOSTER PARENTS</h2>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>IFP1. Place of residence:</div>
-            <div>
-                <input type="text" id="ifp1" name="ifp1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
+            <div></div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>IFP1a. Region:</div>
@@ -213,19 +211,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="ifm5-4" type="radio" value="3" name="ifm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ifm5-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational education</label>
+                    <label for="ifm5-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ifm5-5" type="radio" value="4" name="ifm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ifm5-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized secondary</label>
+                    <label for="ifm5-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ifm5-6" type="radio" value="5" name="ifm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ifm5-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                    <label for="ifm5-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ifm5-7" type="radio" value="6" name="ifm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ifm5-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                    <label for="ifm5-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ifm5-8" type="radio" value="9" name="ifm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -358,19 +356,19 @@
                 </div>
                 <div class="flex items-center">
                     <input id="ift5-4" type="radio" value="3" name="ift5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ift5-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational education</label>
+                    <label for="ift5-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ift5-5" type="radio" value="4" name="ift5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ift5-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized secondary</label>
+                    <label for="ift5-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ift5-6" type="radio" value="5" name="ift5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ift5-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                    <label for="ift5-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ift5-7" type="radio" value="6" name="ift5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="ift5-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                    <label for="ift5-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="ift5-8" type="radio" value="9" name="ift5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
