--- a/src/templates/5A_UZ_ChildDI_Trace_Questionnaire_en.html
+++ b/src/templates/5A_UZ_ChildDI_Trace_Questionnaire_en.html
@@ -38,33 +38,54 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>STR3. Service location (MHOBT Code)</div>
-            <div>
-                <input type="text" id="str3" name="str3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
+            <div>STR3. Service location</div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>a. Region</div>
             <div>
-                <input type="text" id="str3a" name="str3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3a" name="str3a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>b. District</div>
             <div>
-                <input type="text" id="str3b" name="str3b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3b" name="str3b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>c. Settlement</div>
             <div>
-                <input type="text" id="str3c" name="str3c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3c" name="str3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>STR4. Type of institution</div>
             <div>
-                <input type="text" id="str4" name="str4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div>
+                    <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                        <option value="-9" class="t_choose">--</option>
+                        <optgroup label="Childcare institutions:">
+                            <option value="11">11. Mehribonlik house</option>
+                            <option value="12">12. Muruvat house for children with disabilities</option>
+                            <option value="13">13. Family-type home</option>
+                            <option value="14">14. SOS Children&#39;s Village</option>
+                        </optgroup>
+                        <optgroup label="Boarding schools:">
+                            <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
+                            <option value="22">22. Type III-IV for blind or visually impaired children</option>
+                            <option value="23">23. Type V for children with severe speech impairments</option>
+                            <option value="24">24. Type VI for children with musculoskeletal disorders</option>
+                            <option value="25">25. Type VII for children with children with slow mental development/mental disorders</option>
+                            <option value="26">26. Type VIII for children with intellectual disabilities</option>
+                        </optgroup>
+                    </select>
+                </div>
             </div>
         </div>
 
@@ -293,7 +314,7 @@
                     <input type="text" id="ptr8_other" name="ptr8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                 </div>
                 <div class="flex items-center">
-                    <input id="ptr8-6" type="radio" value="6" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ptr8-6" class="ms-2 text-sm text-gray-900">8. Not known</label>
                 </div>
             </div>
@@ -301,7 +322,7 @@
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>a Name of the institution.</div>
+            <div>a. Name of the institution</div>
             <div class="flex items-center">
                 <input type="text" id="ptr8a" name="ptr8a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -320,8 +341,6 @@
                 <input type="text" id="ptr8c" name="ptr8c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
-
-        <p class="mt-6">d. Fill in the 10-digit code of the administrative-territorial unit (МҲОБТ)</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>e. Region:</div>
