--- a/src/templates/5A_UZ_ChildDI_Trace_Questionnaire_ru.html
+++ b/src/templates/5A_UZ_ChildDI_Trace_Questionnaire_ru.html
@@ -38,33 +38,54 @@
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>STR3. Местоположение службы (код MHOBT)</div>
-            <div>
-                <input type="text" id="str3" name="str3" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
+            <div>STR3. Местоположение службы</div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>a. Область</div>
             <div>
-                <input type="text" id="str3a" name="str3a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3a" name="str3a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>b. Район</div>
             <div>
-                <input type="text" id="str3b" name="str3b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3b" name="str3b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>c. Населённый пункт</div>
             <div>
-                <input type="text" id="str3c" name="str3c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="str3c" name="str3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>STR4. Тип учреждения</div>
             <div>
-                <input type="text" id="str4" name="str4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <div>
+                    <select id="str4" name="str4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                        <option value="-9" class="t_choose">--</option>
+                        <optgroup label="Детские учреждения:">
+                            <option value="11">11. Дом Мехрибонлик</option>
+                            <option value="12">12. Дом-интернат Мурувват для детей с инвалидностью</option>
+                            <option value="13">13. Детский дом семейного типа</option>
+                            <option value="14">14. SOS Детская деревня</option>
+                        </optgroup>
+                        <optgroup label="Школа-интернат:">
+                            <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
+                            <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
+                            <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
+                            <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.</option>
+                            <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями.</option>
+                            <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.</option>
+                        </optgroup>
+                    </select>
+                </div>
             </div>
         </div>
 
@@ -293,7 +314,7 @@
                     <input type="text" id="ptr8_other" name="ptr8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                 </div>
                 <div class="flex items-center">
-                    <input id="ptr8-6" type="radio" value="6" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ptr8-6" class="ms-2 text-sm text-gray-900">8. Неизвестно</label>
                 </div>
             </div>
@@ -301,7 +322,7 @@
 
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>a Название заведения.</div>
+            <div>a. Название заведения</div>
             <div class="flex items-center">
                 <input type="text" id="ptr8a" name="ptr8a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
@@ -320,8 +341,6 @@
                 <input type="text" id="ptr8c" name="ptr8c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
-
-        <p class="mt-6">d. Заполните 10-значный код административно-территориальной единицы (МҲОБТ)</p>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>e. Область:</div>
